# sc-plugin

./: .gitignore  sc-plugin.cabal
examples/: Arith.hs  DeepPatMatch.hs  Evaluation.hs  Foldr.hs  IOExample.hs  Imp.hs  InfoProp.hs  KMP.hs  build_example.sh
include/: GHCDefs.h
src/Supercompilation/: ANormal.hs  Annotations.hs  Context.hs  CoreSubst.hs  EvalPlugin.hs  Normalize.hs  Plugin.hs  Show.hs  TaggedExpr.hs
src/Supercompile/: CHSC.hs  GHC.hs  README  StaticFlags.hs  Supercompile.hs  Utilities.hs
src/Supercompile/Core/: FreeVars.hs  Size.hs  Syntax.hs
src/Supercompile/Drive/: MSG.hs  Match.hs  Process.hs  Process1.hs  Split.hs  Split2.hs
src/Supercompile/Evaluator/: Evaluate.hs  Residualise.hs  Syntax.hs
src/Supercompile/Termination/: Combinators.hs  TagBag.hs
